[metadata]
name = homie-helpers
version = 0.0.2
author = Rafał Zarajczyk
author_email = rzarajczyk@gmail.com
description = A set of helpers for implementing Homie IoT Convention
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rzarajczyk/homie-helpers
project_urls =
    Bug Tracker = https://github.com/rzarajczyk/homie-helpers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src